--- a/examples/package.json
+++ b/examples/package.json
@@ -8,8 +8,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "vue-next-select": "link:../",
     "vue": "^3.2.0",
-    "vue-next-select": "2.10.2",
     "vue-router": "^4.0.6",
     "vuex": "^4.0.0"
   },
